<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_match">

    <fragment
        android:id="@+id/navigation_match"
        android:name="com.example.gogagaexample.ui.match.MatchFragment"
        android:label="@string/title_match"
        tools:layout="@layout/fragment_match" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.example.gogagaexample.ui.chats.ChatsFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_alerts"
        android:name="com.example.gogagaexample.ui.alerts.AlertsFragment"
        android:label="@string/title_alerts"
        tools:layout="@layout/fragment_alerts" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.gogagaexample.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
