<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment"
    android:background="@drawable/sample"
    >

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/circularImageView"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/image"
        app:civ_border_color="#BCffffff"
        app:civ_border_width="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="156dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/profile_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/circularImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="@string/profile_profession"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/circularImageView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circularImageView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/claim_rupee"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/_0_flames"
                android:textColor="#ffffff" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:text="@string/refer_friends"
                android:textColor="#ffffff" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/settings_list"
            android:layout_width="match_parent"
            android:layout_height="400dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
